--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,9 +39,16 @@ buildFeatures {
 }
 
 dependencies {
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.6.0'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.6.0'
     def retro_version = "2.9.0"
     implementation "com.squareup.retrofit2:retrofit:$retro_version"
     implementation "com.squareup.retrofit2:converter-gson:$retro_version"
+
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1"
+    def nav_version = "2.6.0"
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
