--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
         implementation 'androidx.appcompat:appcompat:1.6.1'
         implementation 'com.google.android.material:material:1.5.0'
         implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+         implementation 'io.coil-kt:coil:2.4.0'
 
         def retro_version = "2.9.0"
         implementation "com.squareup.retrofit2:retrofit:$retro_version"
